Alteracoes feitas